--- a/src/layouts/partials/Footer.astro
+++ b/src/layouts/partials/Footer.astro
@@ -33,7 +33,7 @@ const { footer }: { footer: { name: string; url: string }[] } = menu;
   </div>
   <div class="border-t border-border py-7 dark:border-darkmode-border">
     <div class="container text-center text-light dark:text-darkmode-light">
-      <p set:html={markdownify(config.params.copyright)} />
+      <p set:html={markdownify(config.params.copyright)+ ", <script>document.write(new Date().getFullYear());</script>"}  />
     </div>
   </div>
 </footer>
