--- a/src/layouts/components/BlogCard.astro
+++ b/src/layouts/components/BlogCard.astro
@@ -9,22 +9,27 @@ const {
   blog_folder,
 }: { summary_length: number; blog_folder: string } = config.settings;
 const { data } = Astro.props;
-const { title, image, date, author, categories } = data.data;
+const { title, image, image2, date, author, categories } = data.data;
 ---
 
 <div class="bg-body dark:bg-darkmode-body">
-  {
-    image && (
-      <Image
-        class="mb-6 w-full rounded"
-        src={image}
-        alt={title}
-        width={445}
-        height={230}
-        format="webp"
-      />
-    )
-  }
+  <div class="mb-6 grid aspect-square content-end">
+
+    {
+      image && (
+      image === undefined?
+                null
+                :(<Image
+                    class="mb-6 w-full rounded"
+                    src={image}
+                    alt={title}
+                    width={445}
+                    height={230}
+                    format="webp" />
+                  )
+      )
+    }
+  </div>
   <h4 class="mb-3">
     <a href={`/${blog_folder}/${data.slug}`}>
       {title}
